feat: complete UI overhaul, major 30-basin map rollout, capability narrative updates, redacted Stack modules, global typography cleanups, and brand favicon

--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO -->
-    <title>OAIL.ai — AI for Energy | The Future Runs on Intelligence</title>
-    <meta name="description" content="OAIL.ai is building autonomous intelligence for the oil and gas industry. AI-powered operations, drone analytics, and next-gen field technology. Something big launches May 18, 2026." />
-    <meta name="keywords" content="OAIL, AI, oil and gas, energy, drone, Bakken, autonomous, intelligence" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- OG Tags -->
-    <meta property="og:title" content="OAIL.ai — AI for Energy" />
-    <meta property="og:description" content="The future of energy runs on intelligence. We're building it. May 18, 2026." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://oail.ai" />
-    <meta property="og:image" content="/OAIL3.png" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/OAIL3_nobg.png" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="OAIL.ai — AI for Energy" />
-    <meta name="twitter:description" content="Something big is coming. May 18, 2026." />
-    <meta name="twitter:image" content="/OAIL3.png" />
+  <!-- SEO -->
+  <title>OAIL.ai - AI for Energy | The Future Runs on Intelligence</title>
+  <meta name="description"
+    content="OAIL.ai is building autonomous intelligence for the oil and gas industry. AI-powered operations, drone analytics, and next-gen field technology. Something big launches May 18, 2026." />
+  <meta name="keywords" content="OAIL, AI, oil and gas, energy, drone, Bakken, autonomous, intelligence" />
 
-    <!-- Anti-scrape -->
-    <meta name="robots" content="index, noarchive" />
+  <!-- OG Tags -->
+  <meta property="og:title" content="OAIL.ai - AI for Energy" />
+  <meta property="og:description"
+    content="The future of energy runs on intelligence. We're building it. May 18, 2026." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://oail.ai" />
+  <meta property="og:image" content="/OAIL3.png" />
 
-    <!-- Preconnect -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  </head>
-  <body class="bg-black text-white overflow-x-hidden">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="OAIL.ai - AI for Energy" />
+  <meta name="twitter:description" content="Something big is coming. May 18, 2026." />
+  <meta name="twitter:image" content="/OAIL3.png" />
+
+  <!-- Anti-scrape -->
+  <meta name="robots" content="index, noarchive" />
+
+  <!-- Preconnect -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+</head>
+
+<body class="bg-black text-white overflow-x-hidden">
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
